Testcases/neg/test05.jl
# function below main statement
function main()

a::Integer = 6
b::Integer = -1
b = a/2


end
main()

function test(a::String, b::Integer)


    end